chore: improve interface implementation
